Use iterators instead of GraphTraversal in IO.